--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Ylla Lab"
 title_separator          : "-"
 name                     : &name "Bioinformatics and Genome Biology Lab"
 description              : &description "Computational approaches to study genes, genomes, and gene regulatory networks."
-url                      : https://ylla-lab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ylla-laboratory.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ylla-laboratory/ylla-laboratory.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
