change theme and skin

--- a/_config.yml
+++ b/_config.yml
@@ -310,5 +310,5 @@ compress_html:
   ignore:
     envs: development
 
-theme: minimal-mistakes-jekyll
+theme: jekyll-theme-midnight
 minimal_mistakes_skin: "default"
