--- a/_config.yml
+++ b/_config.yml
@@ -311,4 +311,4 @@ compress_html:
     envs: development
 
 theme: jekyll-theme-midnight
-minimal_mistakes_skin: "default"
+minimal_mistakes_skin: "neon"
