--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ylla Lab"
-  avatar           : "yllaLabLogo_01.png"
+  avatar           : "YLLA_LAB24_v3_squre.png"
   bio              : "Computational approaches to study genes, genomes, and gene regulatory networks"
   location         : "Jagiellonian University"
   employer         :
