--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "People"
     url: /people/
     
-  - title: "Lab Publications"
+  - title: "Publications"
     url: /publications/
 
   - title: "Communications"
